<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_nav_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/socialHubFragment"
        android:icon="@drawable/ic_nav_social"
        android:title="@string/nav_social" />
    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_nav_wallet"
        android:title="@string/nav_wallet" />
    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_nav_events"
        android:title="@string/nav_events" />
</menu>
